[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/Player/ServerPing.gd" type="Script" id=1]

[node name="ServerPing" type="Node2D"]
script = ExtResource( 1 )

[node name="PingTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ServerPingDisplay" type="Label" parent="."]
margin_left = -232.0
margin_top = -104.0
margin_right = -192.0
margin_bottom = -90.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="PingTimer" to="." method="_on_PingTimer_timeout"]
